<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back17"
    tools:context=".activity.TextQuizActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/txt_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/question_1_of_30"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txt_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:text="@string/score"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/ll_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:textColor="@android:color/white"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:id="@+id/txt_queA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/norma_button"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txt_queB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/norma_button"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txt_queC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/norma_button"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txt_queD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/norma_button"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_options"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/incorrect_button"
        android:gravity="center"
        android:foreground="?attr/selectableItemBackground"
        android:paddingBottom="7dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="7dp"
        android:text="@string/quit"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white" />

</RelativeLayout>