<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back17"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="@android:color/black"
        android:scaleType="centerCrop"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity.MainActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ns_flag"
            android:layout_margin="5dp"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="The Bahamas - Island History"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:maxLines="1"
            android:textStyle="bold"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/ll_text"
                android:background="@drawable/norma_button"
                android:gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_text_24dp" />

                <TextView
                    style="@style/normal_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_quiz" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/ll_visual"
                android:background="@drawable/norma_button"
                android:gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_photo_black_24dp" />

                <TextView
                    style="@style/normal_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visual" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:focusable="true"
                android:layout_margin="10dp"
                android:clickable="true"
                android:id="@+id/ll_map"
                android:background="@drawable/norma_button"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_map_black_24dp" />

                <TextView
                    style="@style/normal_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_quiz" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:layout_margin="10dp"
                android:id="@+id/ll_info"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/norma_button"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_info_24dp" />

                <TextView
                    style="@style/normal_style"
                    android:id="@+id/txt_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_section" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/norma_button"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_volume_up_24dp" />

                <TextView
                    android:id="@+id/txt_sound"
                    style="@style/normal_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sound: ON" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>